# mcp-server

./: .gitignore
mcp-broker/: client.py  pyproject.toml
mcp-broker/assistant/: __init__.py  assistant.py
mcp-broker/src/: main.py  server.py
mcp-broker/src/assistant/: assistant.py
mcp-broker/typings/: R.py
mcp-chat/: README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
mcp-chat/src/main/: index.ts
mcp-chat/src/renderer/: index.html
mcp-chat/src/renderer/dist-electron/: main.js  mcp-chat.css
mcp-chat/src/renderer/src/: App.tsx
mcp-chat/src/renderer/src/assets/: base.css  main.css
mcp-chat/src/renderer/src/components/: Chatbox.tsx
mcp-database/: pyproject.toml  server.py  server1.py
mcp-database/datasource/: Datasource.py  PgDatasource.py  SqlLogger.py  __init__.py
mcp-postgresql/: pyproject.toml  server.ipynb  server.py
mcp-postgresql/datasource/: Datasource.py  DatasourceProperties.py  PgDatasource.py  SqlLogger.py
