[project]
name = "mcp-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "starlette>=0.46.1",
    "uvicorn[standard]>=0.34.0",
    "watchdog>=6.0.0",
]
